[tool.poetry]
name = "useful"
version = "0.0.2"
description = ""
authors = ["DJWOMS <DJWOMS@somemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.55.1"
sqlalchemy = "1.3.17"
alembic = "1.4.2"
uvicorn = "0.11.5"
psycopg2-binary = "2.8.5"
passlib = "1.7.2"
pyjwt = "1.7.1"
emails = "0.5.15"
bcrypt = "3.1.7"
python-multipart = "0.0.5"
jinja2 = "2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
